--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>[4.3.6,)</version>
             <type>lutece-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>module-forms-userassignment</artifactId>
+            <version>[1.0.0-SNAPSHOT,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
     </dependencies>
 
     <properties>
