--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
-            <artifactId>module-forms-userassignment</artifactId>
+            <artifactId>plugin-userassignment</artifactId>
             <version>[1.0.0-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
