--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-workflow</artifactId>
-            <version>[4.3.6,)</version>
+            <version>[4.3.8-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
