--- a/pom.xml
+++ b/pom.xml
@@ -26,19 +26,19 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[6.1.3-SNAPSHOT,)</version>
+            <version>[6.2.0,)</version>
             <type>lutece-core</type>
         </dependency>
 		<dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-workflow</artifactId>
-            <version>[4.3.8-SNAPSHOT,)</version>
+            <version>[4.3.8,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-userassignment</artifactId>
-            <version>[1.0.0-SNAPSHOT,)</version>
+            <version>[1.0.0,)</version>
             <type>lutece-plugin</type>
         </dependency>
     </dependencies>
@@ -50,7 +50,7 @@
     </properties>
     <scm>
         <connection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</connection>
-        <developerConnection>scm:git:https://github.com/lutece-wf-module-workflow-userassignment.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</developerConnection>
         <url>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</url>
         <tag>HEAD</tag>
   	</scm>
