--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     <scm>
         <connection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</developerConnection>
-        <url>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</url>
+        <url>https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</url>
         <tag>HEAD</tag>
   	</scm>
 </project>
