--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-workflow</artifactId>
-            <version>[4.3.8,)</version>
+            <version>[5.0.1-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
