--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>4.0.6</version>
+        <version>5.1.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -26,13 +26,13 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[6.2.0,)</version>
+            <version>[6.2.0,7.0.0-RC-01)</version>
             <type>lutece-core</type>
         </dependency>
 		<dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-workflow</artifactId>
-            <version>[4.3.8,)</version>
+            <version>[4.3.8,5.0.0-SNAPSHOT)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
