--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,13 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-workflow</artifactId>
-            <version>[5.0.1-SNAPSHOT,)</version>
+            <version>[5.0.1,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-userassignment</artifactId>
-            <version>[1.0.1-SNAPSHOT,)</version>
+            <version>[1.0.1,)</version>
             <type>lutece-plugin</type>
         </dependency>
     </dependencies>
