MWUASSIGNT-22 : Add an automatic unassign workflow task

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
@@ -33,3 +33,6 @@ task_user_assignment_notification.config.labelRecipientsCc=Recipients CC
 task_user_assignment_notification.config.labelRecipientsCcHelp=Recipients CC
 task_user_assignment_notification.config.labelRecipientsBcc=Recipients BCC
 task_user_assignment_notification.config.labelRecipientsBccHelp=Recipients BCC
+
+# Task Unassign User Resource Automatic
+task_unassign_user_resource_automatic.title=(Userassignment) Unassign a response automatically
