MWUASSIGNT-23:[BO] Added task "(Userassignment) Assign notification" in history

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
@@ -34,5 +34,8 @@ task_user_assignment_notification.config.labelRecipientsCcHelp=Recipients CC
 task_user_assignment_notification.config.labelRecipientsBcc=Recipients BCC
 task_user_assignment_notification.config.labelRecipientsBccHelp=Recipients BCC
 
+task_user_assignment_notification.history.information=A notification has been sent to 
+task_user_assignment_notification.history.information.user_unknown=Unknown user
+
 # Task Unassign User Resource Automatic
 task_unassign_user_resource_automatic.title=(Userassignment) Unassign a response automatically
