MWUASSIGNT-25 : Add boodmark management to the task

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
@@ -39,3 +39,6 @@ task_user_assignment_notification.history.information.user_unknown=Unknown user
 
 # Task Unassign User Resource Automatic
 task_unassign_user_resource_automatic.title=(Userassignment) Unassign a response automatically
+
+# Markers
+markers.agent_name=First name of the agent receiving the email
