MWUASSIGNT-26 : Fix bug task notification assignment

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
@@ -22,7 +22,6 @@ prerequisite.user.resource.title=User assigned to resource
 task_user_assignment_notification.title=(Userassignment) Assign notification
 task_user_assignment_notification.config.title=Assign notification
 task_user_assignment_notification.config.labelMessage=Message
-task_user_assignment_notification.config.labelMessageHelp=Marks 'resourceId' and 'resourceType' are available
 task_user_assignment_notification.config.labelSubject=Subject
 task_user_assignment_notification.config.labelSubjectHelp=Subject to message
 task_user_assignment_notification.config.labelSenderName=Sender name
@@ -42,3 +41,5 @@ task_unassign_user_resource_automatic.title=(Userassignment) Unassign a response
 
 # Markers
 markers.agent_name=First name of the agent receiving the email
+markers.resource_id=Resource id
+markers.resource_type=Resource type
