LUT-27234 : New translation resources files for citelibre related plugins

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
@@ -1,45 +1,45 @@
 # Plugin's keys
-module.provider=Mairie de Paris
-module.description=Lutece Module wf User assigment
+module.provider=City of Paris
+module.description=Lutece Module wf User assignment
 
 task.user.assign.config.self=Current User
 task.user.assign.config.title=Configuration
-task.user.assign.config.user.choice=User Choice
+task.user.assign.config.user.choice=User Selection
 task.user.assign.title=(Userassignment) Assign a response
 task.user.unassign.title=(Userassignment) Unassign a response
 task.user.labelUserSelection=Assign to:
 task.user.labelUnassignUserSelection=Unassign:
-task.user.noUnitSelection=No assignment available.
-task.user.assign.information.description=Resource assignment
-task.user.unassign.information.description=Resource unassigned by
+task.user.noUnitSelection=No assignment possible.
+task.user.assign.information.description=Assigning the resource
+task.user.unassign.information.description=Unassigning the resource by
 
 # Prerequisite
-prerequisite.nouser.title=No user assigned
-prerequisite.user.title=User assigned
-prerequisite.user.resource.title=User assigned to resource
+prerequisite.nouser.title=No assigned user
+prerequisite.user.title=Assigned User
+prerequisite.user.resource.title=User assigned to the response
 
 # Task user assignment notification
-task_user_assignment_notification.title=(Userassignment) Assign notification
-task_user_assignment_notification.config.title=Assign notification
+task_user_assignment_notification.title=(Userassignment) Assign a notification
+task_user_assignment_notification.config.title=Assign a notification
 task_user_assignment_notification.config.labelMessage=Message
 task_user_assignment_notification.config.labelSubject=Subject
-task_user_assignment_notification.config.labelSubjectHelp=Subject to message
-task_user_assignment_notification.config.labelSenderName=Sender name
-task_user_assignment_notification.config.labelSenderNameHelp=Sender name 
-task_user_assignment_notification.config.labelSenderEmail=Sender email
-task_user_assignment_notification.config.labelSenderEmailtHelp=Sender email 
-task_user_assignment_notification.config.labelRecipientsCc=Recipients CC
-task_user_assignment_notification.config.labelRecipientsCcHelp=Recipients CC
-task_user_assignment_notification.config.labelRecipientsBcc=Recipients BCC
-task_user_assignment_notification.config.labelRecipientsBccHelp=Recipients BCC
+task_user_assignment_notification.config.labelSubjectHelp=Subject of the message
+task_user_assignment_notification.config.labelSenderName=Sender's Name
+task_user_assignment_notification.config.labelSenderNameHelp=Sender's Name
+task_user_assignment_notification.config.labelSenderEmail=Sender's Email
+task_user_assignment_notification.config.labelSenderEmailHelp=Sender's Email
+task_user_assignment_notification.config.labelRecipientsCc=CC Recipients
+task_user_assignment_notification.config.labelRecipientsCcHelp=Recipients in copy (CC)
+task_user_assignment_notification.config.labelRecipientsBcc=BCC Recipients
+task_user_assignment_notification.config.labelRecipientsBccHelp=Recipients in blind copy (BCC)
 
-task_user_assignment_notification.history.information=A notification has been sent to 
+task_user_assignment_notification.history.information=A notification has been sent to
 task_user_assignment_notification.history.information.user_unknown=Unknown user
 
 # Task Unassign User Resource Automatic
 task_unassign_user_resource_automatic.title=(Userassignment) Unassign a response automatically
 
 # Markers
-markers.agent_name=First name of the agent receiving the email
-markers.resource_id=Resource id
-markers.resource_type=Resource type
+markers.agent_name=Recipient agent's first name
+markers.resource_id=Resource ID
+markers.resource_type=Resource Type
