LUT-30104 : New task to assign the current user without validation screens

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages.properties
@@ -13,6 +13,8 @@ task.user.noUnitSelection=No assignment possible.
 task.user.assign.information.description=Assigning the resource
 task.user.unassign.information.description=Unassigning the resource by
 
+task.currentuser.assign.title=(Userassignment) Assign a response to the current user
+
 # Prerequisite
 prerequisite.nouser.title=No assigned user
 prerequisite.user.title=Assigned User
