LUT-30381 : upgrade to Lutece V8

--- a/webapp/WEB-INF/conf/plugins/workflow-userassignment.properties
+++ b/webapp/WEB-INF/conf/plugins/workflow-userassignment.properties
@@ -4,3 +4,41 @@
 # Default Labels for XPage
 userassignment.pageTitle=userassignment
 userassignment.pagePathLabel=userassignment
+
+# task type
+workflow-userassignment.assignUserResourceTypeTask.key=assignUserResourceTask
+workflow-userassignment.assignUserResourceTypeTask.titleI18nKey=module.workflow.userassignment.task.user.assign.title
+workflow-userassignment.assignUserResourceTypeTask.beanName=workflow-userassignment.assignUserResourceTask
+workflow-userassignment.assignUserResourceTypeTask.configBeanName=workflow-userassignment.assignUserResourceTaskConfig
+workflow-userassignment.assignUserResourceTypeTask.taskForAutomaticAction=false
+workflow-userassignment.assignUserResourceTypeTask.configRequired=true
+workflow-userassignment.assignUserResourceTypeTask.formTaskRequired=true
+
+workflow-userassignment.assignToCurrentUserResourceTypeTask.key=assignCurrentUserResourceTask
+workflow-userassignment.assignToCurrentUserResourceTypeTask.titleI18nKey=module.workflow.userassignment.task.currentuser.assign.title
+workflow-userassignment.assignToCurrentUserResourceTypeTask.beanName=workflow-userassignment.assignToCurrentUserResourceTask
+workflow-userassignment.assignToCurrentUserResourceTypeTask.taskForAutomaticAction=false
+workflow-userassignment.assignToCurrentUserResourceTypeTask.configRequired=false
+workflow-userassignment.assignToCurrentUserResourceTypeTask.formTaskRequired=false
+
+workflow-userassignment.unassignUserResourceTypeTask.key=unassignUserResourceTask
+workflow-userassignment.unassignUserResourceTypeTask.titleI18nKey=module.workflow.userassignment.task.user.unassign.title
+workflow-userassignment.unassignUserResourceTypeTask.beanName=workflow-userassignment.unassignUserResourceTask
+workflow-userassignment.unassignUserResourceTypeTask.taskForAutomaticAction=false
+workflow-userassignment.unassignUserResourceTypeTask.configRequired=false
+workflow-userassignment.unassignUserResourceTypeTask.formTaskRequired=true
+
+workflow-userassignment.taskTypeUserAssignmentNotification.key=taskUserAssignmentNotification
+workflow-userassignment.taskTypeUserAssignmentNotification.titleI18nKey=module.workflow.userassignment.task_user_assignment_notification.title
+workflow-userassignment.taskTypeUserAssignmentNotification.beanName=workflow-userassignment.taskUserAssignmentNotification
+workflow-userassignment.taskTypeUserAssignmentNotification.configBeanName=workflow-userassignment.taskUserAssignmentNotificationConfig
+workflow-userassignment.taskTypeUserAssignmentNotification.taskForAutomaticAction=true
+workflow-userassignment.taskTypeUserAssignmentNotification.configRequired=true
+workflow-userassignment.taskTypeUserAssignmentNotification.formTaskRequired=false
+
+workflow-userassignment.taskTypeUnassignUserResourceAutomatic.key=taskUnassignUserResourceAutomatic
+workflow-userassignment.taskTypeUnassignUserResourceAutomatic.titleI18nKey=module.workflow.userassignment.task_unassign_user_resource_automatic.title
+workflow-userassignment.taskTypeUnassignUserResourceAutomatic.beanName=workflow-userassignment.taskUnassignUserResourceAutomatic
+workflow-userassignment.taskTypeUnassignUserResourceAutomatic.taskForAutomaticAction=true
+workflow-userassignment.taskTypeUnassignUserResourceAutomatic.configRequired=false
+workflow-userassignment.taskTypeUnassignUserResourceAutomatic.formTaskRequired=false
