--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-workflow-userassignment</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
     <name>Lutece workflow userassignment module</name>
 
     <repositories>
@@ -72,6 +72,6 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-wf-module-workflow-userassignment.git</url>
-        <tag>module-workflow-userassignment-3.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
